# art-dependency-management

./: pyproject.toml
scripts/: load_model.py  load_video.py  run_model.py
